<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Fast Battery Charger 5X</string>
    <string name="wifi" translatable="false">WiFi</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="aaaaa" translatable="false">AAAAA</string>
    <string name="usb" translatable="false">USB</string>

    <!-- Menu items -->
    <string name="action_clean">Clean</string>
    <string name="action_rescan">Rescan</string>
    <string name="action_search">Search</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_size">Sort by size</string>
    <string name="action_settings">Settings</string>
    <string name="save_your_battery_fast_charger_with_super_fast_battery_charger">Save your battery fast charger with \\n Super fast battery charger.\"</string>
    <string name="no_issue">No issue</string>
    <string name="fast_charger_2_x">2x Fast Charger</string>
    <string name="disable_location_service_and_your_battery_will_charge_2x_faster">Disable location service and your battery will charge 2x faster</string>
    <string name="turn_off_location">Turn Off Location</string>
    <string name="fast_charger_3_x">3x Fast Charger</string>
    <string name="enable_airplane_mode_and_your_battery_will_charge_3x_faster">Enable airplane mode and your battery will charge 3x faster</string>
    <string name="turn_on_airplane_mode">Turn on airplane mode</string>
    <string name="disable_mobile_data_and_your_battery_will_charge_2x_faster">Disable mobile data and your battery will charge 2x faster</string>
    <string name="turn_off_mobile_data">Turn Off Mobile Data</string>
    <string name="optimize">Optimize</string>
    <string name="brightness">Brightness</string>
    <string name="rotate">Rotate</string>
    <string name="mode">Mode</string>
    <string name="timeout">Timeout</string>
    <string name="temperature">Temperature</string>
    <string name="voltage">Voltage</string>
    <string name="level">Level</string>
    <string name="time_out">Time out</string>
    <string name="charge_completed_please_unplug_the_charger">Charge completed \\n Please unplug the charger</string>
    <string name="power_type">Power Type</string>
    <string name="fast_charge_on_going">Fast Charge \\n on going</string>
    <string name="full_charge_waiting">Full Charge \\n waiting</string>
    <string name="trickle_charge_waiting">Trickle Charge \\n waiting</string>
    <string name="start_fast_charging">START FAST CHARGING</string>


</resources>
