<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/txtNoMoreIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_issue"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="31sp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/BannerAd"
        android:layout_below="@+id/tool_bar"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="18dp">

            <LinearLayout
                android:id="@+id/NativeAdContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="18dp"
                android:orientation="vertical"
                android:visibility="gone" />


            <androidx.cardview.widget.CardView
                android:id="@+id/LocationCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/NativeAdContainer"
                android:layout_marginBottom="6dp"
                android:backgroundTint="@color/cardcolor">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/Rlout_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/TxtTitleLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:paddingTop="24dp"
                            android:text="@string/fast_charger_2_x"
                            android:textColor="@color/white"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/txtDicLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/TxtTitleLocation"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:paddingTop="12dp"
                            android:text="@string/disable_location_service_and_your_battery_will_charge_2x_faster"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/Rlout_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Rlout_top"
                        android:padding="6dp">

                        <Button
                            android:id="@+id/LocationTurnOff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="6dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:padding="6dp"
                            android:text="@string/turn_off_location"
                            android:textColor="@color/textPreference" />

                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/AroplaneCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LocationCardView"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/cardcolor">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/Rlout_top_Aroplane"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/TxtTitleAroplane"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:paddingTop="24dp"
                            android:text="@string/fast_charger_3_x"
                            android:textColor="@color/white"
                            android:textSize="17sp" />


                        <TextView
                            android:id="@+id/txtDicAroplane"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/TxtTitleAroplane"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:paddingTop="12dp"
                            android:text="@string/enable_airplane_mode_and_your_battery_will_charge_3x_faster"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/Rlout_action1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Rlout_top_Aroplane"
                        android:padding="6dp">

                        <Button
                            android:id="@+id/AroplaneTurnOn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="6dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:padding="6dp"
                            android:text="@string/turn_on_airplane_mode"
                            android:textColor="@color/textPreference" />

                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/MoblieDataCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/AroplaneCardView"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/cardcolor">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/Rlout_top_MoblieData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/TxtTitleMobileData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:paddingTop="24dp"
                            android:text="@string/fast_charger_2_x"
                            android:textColor="@color/white"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/txtDicMobileData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/TxtTitleMobileData"
                            android:paddingLeft="18dp"
                            android:paddingRight="18dp"
                            android:paddingTop="12dp"
                            android:text="@string/disable_mobile_data_and_your_battery_will_charge_2x_faster"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/Rlout_action2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Rlout_top_MoblieData"
                        android:padding="6dp">

                        <Button
                            android:id="@+id/MoblieDataTurnOff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="6dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:padding="6dp"
                            android:text="@string/turn_off_mobile_data"
                            android:textColor="@color/textPreference" />

                    </RelativeLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
